# GeeksongEditor

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
docs/superpowers/plans/: 2026-04-19-geeksong-editor-mvp.md  2026-04-19-geeksong-rust-mvp.md
docs/superpowers/specs/: 2026-04-19-geeksong-editor-design.md  2026-04-19-geeksong-rust-editor-design.md
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  export.rs  fs.rs  main.rs  markdown.rs
src/components/: Editor.tsx  FileTree.tsx  Preview.tsx  StatusBar.tsx  Toolbar.tsx  WysiwygEditor.tsx
src/hooks/: useScrollSync.ts
src/prosemirror/: markdown.ts  schema.ts
src/utils/: previewRender.test.ts  previewRender.ts  tauri.ts  wordCount.test.ts  wordCount.ts
