[package]
name = "geeksong-editor"
version = "0.1.0"
description = "GeeksongEditor - A real Markdown editor built with Rust"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
html-escape = "0.2"
toml = "0.8"
dirs = "6"
once_cell = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
